Add content to Activites-Index

--- a/accommodations.html
+++ b/accommodations.html
@@ -2,8 +2,26 @@
 <html>
   <head>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-    <title>PlaceHolder</title>
+    <title>Accommodation</title>
   </head>
   <body>
+    <h1>Resort Accommodation</h1>
+
+    <p>The modish and comfy spaces of Fihalhohi Island Resort’s
+      Classic, Comfort, and Premium Rooms are dressed to impress.
+      Meanwhile, our bungalows present a more exquisite retreat
+      over the turquoise waters of the island.</p>
+
+    <h3>Amenities</h3>
+    <ul>
+      <li>Sundeck</li>
+      <li>Minibar</li>
+      <li>Airconditioning</li>
+      <li>Private toilet</li>
+    </ul>
+
+    <h3><a href="contact_information.html">Call</a> for prices </h3>
+
+    <h4><a href="index.html">Back to Homepage</a></h4>
   </body>
 </html>
