--- a/activities.html
+++ b/activities.html
@@ -2,8 +2,25 @@
 <html>
   <head>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-    <title>PlaceHolder</title>
+    <title>Activities</title>
   </head>
   <body>
+    <h1>Activities</h1>
+    <p>Beautiful Beaches has many opportunities for activities
+    such as scuba diving, snorkeling, surfing and swimming. We
+    have a tennis court, golf course and hot tub on site. Every night
+    there are nightlife activities going on in the city, which is
+    walking distance from the rooms. Check
+    <a href="pictures.html">here</a> for some pictures from a
+    recent scuba trip</p>
+
+    <h2>Event Schedule:</h2>
+    <ul>
+      <li>May 24th: Scuba Dive 10:00 AM Location: Beach</li>
+      <li>May 25th: Concert 7 PM Location: City Concert Hall
+        (see <a href="travel_arrangements.html">here</a> for directions)<li>
+      <li>May 27th: Golf Tournament 9:00 AM Location Golf Course</li>
+    </ul>
+
   </body>
 </html>
