--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-    <title>PlaceHolder</title>
+    <link href="css/style1.css" rel="stylesheet" type="text/css">
+    <title>Beautiful Beaches</title>
   </head>
   <body>
+    <h1>Welcome to the Website for Beautiful Beaches!</h1>
+    <h2>Home of Jack's World Famous Oyster Bar</h2>
+
+    <p>Some more text</p>
+
+    <h3>Useful links</h3>
+    <ul>
+      <li><a href="accomodations.html">Accomodation</a></li>
+      <li><a href="activities.html">Activities</a></li>
+      <li><a href="contact_information.html">Contact Information</a></li>
+      <li><a href="pictures.html">Pictures</a></li>
+      <li><a href="travel_arrangements.html">Travel Arrangements</a></li>
+    </ul>
   </body>
 </html>
