--- a/contact_information.html
+++ b/contact_information.html
@@ -2,8 +2,18 @@
 <html>
   <head>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-    <title>PlaceHolder</title>
+    <title>Contact Information</title>
   </head>
   <body>
+    <h2>We are here 24/7 to make your stay pleasant</h2>
+    <p>We can be reached</p>
+
+    <ul>
+      <li>Phone: 1-800-123-4567</li>
+      <li>Email: islandresort@example.com</li>
+      <li>Twitter: #islandresort</li>
+    </ul>    
+
+
   </body>
 </html>
