Add some more text and styling to html files

--- a/activities.html
+++ b/activities.html
@@ -22,5 +22,7 @@
       <li>May 27th: Golf Tournament 9:00 AM Location Golf Course</li>
     </ul>
 
+    <a href="index.html">Return to HomePage</a>
+
   </body>
 </html>
