--- a/contact_information.html
+++ b/contact_information.html
@@ -12,8 +12,9 @@
       <li>Phone: 1-800-123-4567</li>
       <li>Email: islandresort@example.com</li>
       <li>Twitter: #islandresort</li>
-    </ul>    
+    </ul>
 
+<a href="index.html">Return to HomePage</a>
 
   </body>
 </html>
