--- a/travel_arrangements.html
+++ b/travel_arrangements.html
@@ -2,8 +2,19 @@
 <html>
   <head>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-    <title>PlaceHolder</title>
+    <title>Travel Arrangements</title>
   </head>
   <body>
+    <h2>Some common ways to get to Beautiful Beaches</h2>
+    <p>Located in the center of the tourist destination, you can get here
+    by all sorts of transportation.</p>
+    <h3>Travel from the North</h3>
+    <ol>
+      <li>Make left turn at A street onto B street</li>
+      <li>Keep going on B street for 4 traffic lights, make a right turn onto C Ave</li>
+      <li>Take C Ave all the way till you see a sign post "Beautiful Beaches", you just arrive</li>
+    </ol>
+
+    <a href="index.html">Return to HomePage</a>
   </body>
 </html>
