--- a/pictures.html
+++ b/pictures.html
@@ -2,8 +2,22 @@
 <html>
   <head>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-    <title>PlaceHolder</title>
+    <title>Pictures</title>
   </head>
   <body>
+    <h1>The Sights of Beautiful Beach!</h1>
+    <h2>The Beach</h2>
+    <ul>
+      <li><img src="images/beach1.jpeg" alt="A Picture of the Beach"></li>
+      <li><img src="images/beach2.jpeg" alt="A Picture of the Beach"></li>
+      <li><img src="images/beach3.jpeg" alt="A Picture of the Beach"></li>
+    </ul>
+    <h2>The Resort</h2>
+    <ul>
+      <li><img src="images/resort1.jpg" alt="A Bungalow"></li>
+      <li><img src="images/resort2.jpeg" alt="Tennis Courts"></li>
+      <li><img src="images/resort3.gif" alt="Golf Course"></li>
+    </ul>
+    <a href="index.html">Return to HomePage</a>
   </body>
 </html>
