--- a/accommodations.html
+++ b/accommodations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="css/stylesheet2.css" rel="stylesheet" type="text/css">
     <title>Accommodation</title>
   </head>
   <body>
