--- a/contact_information.html
+++ b/contact_information.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="css/stylesheet2.css" rel="stylesheet" type="text/css">
     <title>Contact Information</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
       <li>Twitter: #islandresort</li>
     </ul>
 
-<a href="index.html">Return to HomePage</a>
+    <a href="index.html">Return to HomePage</a>
 
   </body>
 </html>
