--- a/pictures.html
+++ b/pictures.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="css/style1.css" rel="stylesheet" type="text/css">
     <title>Pictures</title>
   </head>
   <body>
