fixes some typographical and formatting errors

--- a/accommodations.html
+++ b/accommodations.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Resort Accommodation</h1>
 
-    <p>The modish and comfy spaces of Fihalhohi Island Resort’s
+    <p>The modish and comfy spaces of Fihalhohi Island Resort's
       Classic, Comfort, and Premium Rooms are dressed to impress.
       Meanwhile, our bungalows present a more exquisite retreat
       over the turquoise waters of the island.</p>
