--- a/contact_information.html
+++ b/contact_information.html
@@ -10,7 +10,7 @@
 
     <ul>
       <li>Phone: 1-800-123-4567</li>
-      <li>Email: islandresort@example.com</li>
+      <li>Email: <a href="mailto:islandresort@example.com">islandresort@example.com</a></li>
       <li>Twitter: #islandresort</li>
     </ul>
 
