--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <h1>Welcome to the Website for Beautiful Beaches!</h1>
     <h2>Home of Jack's World Famous Oyster Bar</h2>
 
-    <p>Some more text</p>
+    <p>Nestled on the corner of scenic Square Island, Beautiful
+    Beaches is the premiere destination in luxury and comfort
+    vacationing. Founded by an eccentric recluse with a love of
+    snorkelling and oysters, Beautiful Beaches houses some of the most pristine
+    coral reefs in the South Pacific</p>
 
     <h3>Useful links</h3>
     <ul>
-      <li><a href="accomodations.html">Accomodation</a></li>
+      <li><a href="accommodations.html">Accomodation</a></li>
       <li><a href="activities.html">Activities</a></li>
       <li><a href="contact_information.html">Contact Information</a></li>
       <li><a href="pictures.html">Pictures</a></li>
