--- a/pictures.html
+++ b/pictures.html
@@ -8,15 +8,21 @@
     <h1>The Sights of Beautiful Beach!</h1>
     <h2>The Beach</h2>
     <ul>
-      <li><img src="images/beach1.jpeg" alt="A Picture of the Beach"></li>
-      <li><img src="images/beach2.jpeg" alt="A Picture of the Beach"></li>
-      <li><img src="images/beach3.jpeg" alt="A Picture of the Beach"></li>
+      <li><img src="images/beach1.jpeg" width="250"
+        alt="A Picture of the Beach"></li>
+      <li><img src="images/beach2.jpeg" width="250"
+        alt="A Picture of the Beach"></li>
+      <li><img src="images/beach3.jpeg" width="250"
+        alt="A Picture of the Beach"></li>
     </ul>
     <h2>The Resort</h2>
     <ul>
-      <li><img src="images/resort1.jpg" alt="A Bungalow"></li>
-      <li><img src="images/resort2.jpeg" alt="Tennis Courts"></li>
-      <li><img src="images/resort3.gif" alt="Golf Course"></li>
+      <li><img src="images/resort1.jpg" width="250"
+        alt="A Bungalow"></li>
+      <li><img src="images/resort2.jpeg" width="250"
+        alt="Tennis Courts"></li>
+      <li><img src="images/resort3.gif" width="250"
+        alt="Golf Course"></li>
     </ul>
     <a href="index.html">Return to HomePage</a>
   </body>
