add some more styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Welcome to the Website for Beautiful Beaches!</h1>
     <h2>Home of Jack's World Famous Oyster Bar</h2>
 
-    <p>Nestled on the corner of scenic Square Island, Beautiful
+    <p>Nestled on <span>the corner</span> of scenic Square Island, Beautiful
     Beaches is the premiere destination in luxury and comfort
     vacationing. Founded by an eccentric recluse with a love of
     snorkelling and oysters, Beautiful Beaches houses some of the most pristine
