--- a/pictures.html
+++ b/pictures.html
@@ -5,7 +5,7 @@
     <title>Pictures</title>
   </head>
   <body>
-    <h1>The Sights of Beautiful Beach!</h1>
+    <h1>The Sights of <span>Beautiful Beach!</span></h1>
     <h2>The Beach</h2>
     <ul>
       <li><img src="images/beach1.jpeg" width="250"
